# visual-doc

./: .gitignore  README.md  gendoc.toml.example  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  packages.md
docs/api/: example_pkg.md  example_pkg_circular_a.md  example_pkg_circular_b.md  example_pkg_models.md  example_pkg_services.md  example_pkg_utils.md
docs/diagrams/: example_pkg.mmd  example_pkg.puml  example_pkg_circular_a.mmd  example_pkg_circular_a.puml  example_pkg_circular_b.mmd  example_pkg_circular_b.puml  example_pkg_models.mmd  example_pkg_models.puml  example_pkg_services.mmd  example_pkg_services.puml  example_pkg_utils.mmd  example_pkg_utils.puml  package.mmd  package.puml
docs/modules/: example_pkg.md  example_pkg_circular_a.md  example_pkg_circular_b.md  example_pkg_models.md  example_pkg_services.md  example_pkg_utils.md
example/: gendoc.toml  library_usage.py
example/example_pkg/: __init__.py  circular_a.py  circular_b.py  models.py  services.py  utils.py
examples/: library_usage.py
src/gendoc/: __init__.py  api.py  cli.py  config.py  paths.py
src/gendoc/analyzer/: __init__.py  ast_parser.py  cache.py  models.py  package_analyzer.py  relationships.py
src/gendoc/builder/: site_builder.py
src/gendoc/renderers/: __init__.py  common.py  mermaid.py  package_mermaid.py  plantuml.py  svg.py
tests/: conftest.py  test_analyzer.py  test_ast_parser.py  test_builder.py  test_cache.py  test_cli.py  test_config.py  test_coverage_extra.py  test_e2e_example.py  test_library_api.py  test_mermaid_syntax.py  test_relationships.py  test_renderers.py
