[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gendoc"
version = "0.1.0"
description = "Pipeline de documentation graphique automatique pour projet Python - Génère diagrammes UML, graphes de dépendances et site MkDocs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Visual Doc Team"}]
keywords = ["documentation", "uml", "mermaid", "plantuml", "diagrams", "mkdocs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "jinja2>=3.0",
  "mkdocs>=1.5",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "mypy>=1.0",
]
svg = [
  "cairosvg>=2.7",
]
all = [
  "cairosvg>=2.7",
]

[project.urls]
Homepage = "https://github.com/CouLiBaLy-B/visual-doc"
Repository = "https://github.com/CouLiBaLy-B/visual-doc"
Issues = "https://github.com/CouLiBaLy-B/visual-doc/issues"

[project.scripts]
gendoc = "gendoc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=gendoc --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["src/gendoc"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
