[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gendoc"
version = "0.1.0"
description = "Pipeline de documentation graphique automatique pour projet Python - Génère diagrammes UML, graphes de dépendances et site MkDocs"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Visual Doc Team"}]
keywords = ["documentation", "uml", "mermaid", "plantuml", "diagrams", "mkdocs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.11"
# Cœur volontairement léger : l'usage librairie (analyse + diagrammes)
# ne tire pas la pile MkDocs, disponible via l'extra [site].
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "jinja2>=3.0",
]

[project.optional-dependencies]
site = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
]
svg = [
  "cairosvg>=2.7",
]
all = [
  "gendoc[site,svg]",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
  "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/CouLiBaLy-B/visual-doc"
Repository = "https://github.com/CouLiBaLy-B/visual-doc"
Issues = "https://github.com/CouLiBaLy-B/visual-doc/issues"

[project.scripts]
gendoc = "gendoc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gendoc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# la couverture est exigée en CI (voir .github/workflows/ci.yml) ;
# un `pytest` nu doit fonctionner sans pytest-cov installé

[tool.coverage.run]
source = ["src/gendoc"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
